--- a/Week 1 - Javascript Fundamentals for React/Practice/1.9_Fetch_API_Promises_Javascript/index.html
+++ b/Week 1 - Javascript Fundamentals for React/Practice/1.9_Fetch_API_Promises_Javascript/index.html
@@ -9,9 +9,7 @@
 
 <body>
 
-    <h1>Assignments</h1>
-
-    <script src="1.1_assignment.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 
 </html>
